remove validation by registration number for doctors signup
